--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="styles/style.css">
     
     <title>SW</title>
 </head>
@@ -15,7 +15,7 @@
                 <header class="header">
                     <div class="header__logo">                        
                         <a href="#" class="header__logo-link">
-                            <img src="./img/icons8.svg" alt="Georgian" class="header__logo-img">
+                            <img src="img/icons8.svg" alt="Georgian" class="header__logo-img">
                         </a>                        
                     </div>
                     <nav class="header__nav" >
